name:                udp-laundry
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/udp-laundry#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable udp-laundry
  hs-source-dirs:      src
  c-sources:           cbits/tun.c                        
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , stm-containers
                     , bytestring
                     , hans
                     , transformers
                     , stm
                     , focus
                     , hslogger
                     , cereal
                     , base-prelude
                     , list-t
                     , random
                     , hashable
                     , optparse-applicative
                     , yaml
                     , aeson
                     , text
  default-extensions:  OverloadedStrings
                                                           
